--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   },
   "author": "Christian Fenn",
   "license": "ISC",
-  "devDependencies": {
-    "chai": "^4.3.4"
-  },
+  "devDependencies": {},
   "dependencies": {
-    "mocha": "^8.3.2"
+    "mocha": "^8.3.2",
+    "chai": "^4.3.4"
   }
 }
